# qr_track

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/src/common/util/: logger.dart
example/lib/src/common/widget/: app.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: qr_track.podspec
ios/Classes/: qr_track.c
lib/: bindings_generated.dart  qr_track.dart  qr_track_bindings_generated.dart  zxing_mobile.dart
lib/src/controller/: barcode_encoder.dart  barcode_reader.dart  barcodes_reader.dart  bindings.dart  camera_stream.dart  zxing.dart
lib/src/model/: format.dart
lib/src/util/: extentions.dart  image_converter.dart  isolate_utils.dart
lib/src/widget/: qr_view.dart  qr_view_controller.dart
linux/: CMakeLists.txt
macos/: qr_track.podspec
src/: CMakeLists.txt  common.cpp  common.h  dart_alloc.h  qr_track.c  qr_track.cpp  qr_track.h
windows/: CMakeLists.txt
(+3 files in other folders)
